--- a/bower.json
+++ b/bower.json
@@ -3,9 +3,12 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.3.0",
-    "bootstrap": "^3.2.0",
+    "angular-moment": "~0.10.2",
     "angular-resource": "^1.3.0",
-    "angular-route": "^1.3.0"
+    "angular-route": "^1.3.0",
+    "angular-socket-io": "~0.7.0",
+    "bootstrap": "^3.2.0",
+    "moment-timezone": "~0.4.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
