--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "angular-socket-io": "~0.7.0",
     "AngularJS-Toaster": "angularjs-toaster#~0.4.15",
     "bootstrap": "^3.2.0",
+    "highcharts-ng": "~0.0.8",
     "moment-timezone": "~0.4.0"
   },
   "devDependencies": {
